layout bugs fixed, table overflow bug fixed

--- a/css/style.less
+++ b/css/style.less
@@ -4,17 +4,14 @@
 @gray2: #6b6b6b;
 
 html {
+  display: table;
   width: 100%;
-  height: 1px;
-  min-height: 100%;
+  height: 100%;
 }
 
 body {
-  .bxz(border-box);
-  width: 100%;
-  height: 1px;
-  min-height: 100%;
-  min-width: 300px;
+  height: 100%;
+  min-width: 292px;
   padding: 4%;
   border-bottom: 1px solid #ffffff;
   font: 1em 'Century Gothic', Futura, Arial, sans-serif;
@@ -25,7 +22,7 @@ body {
   width: 100%;
   min-height: 100%;
   max-width: 600px;
-  min-width: 300px;
+  min-width: 280px;
 
   border: 3px solid @gray;
   margin: 0 auto;
@@ -82,23 +79,23 @@ body {
 
 .contacts {
   border-collapse: collapse;
+  table-layout: fixed;
   width: 100%;
+  margin-top: 1em;
 
   &__headers {
     th {
-      width: 40%;
       border: 2px solid @gray2;
       padding: .25em .65em;
-      font-size: 1.2em;
       background: @gray2;
       color: #fff;
     }
 
     th:last-child {
-      background: @gray2 url('../imgs/3.png') no-repeat 50% 50%;
+      background: @gray2 url('../imgs/settings.png') no-repeat 50% 50%;
       background-size: contain;
       padding: 0;
-      width: auto;
+      width: 80px;
       text-indent: -10000px;
     }
   }
@@ -106,6 +103,9 @@ body {
   &__item td{
     border: 2px solid @gray2;
     padding: .25em .65em;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+
 
     &:last-child {
       padding: 0.4em;
